Fixed spacing issues on race series single post

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -3443,6 +3443,7 @@ body.subpage.single {
 	}
 }
 
+
 #section-featured-posts {
 	.flexwrap {
 		margin-left: -5px;
@@ -3720,7 +3721,7 @@ body.single-race {
 		margin-top: 35px;
 	}
 	#primary #section-faqs {
-		padding-top: 50px;
+		padding-top: 60px;
 		padding-bottom: 30px;
 	}
 }
